I fixed layout on mobile

--- a/index.css
+++ b/index.css
@@ -98,7 +98,7 @@ body {
     color: #FFFFFF;
     text-align: left;
     font-size: 30px;
-    padding: 100px;
+    padding: 4vw;
 }
 
 .pagebody p {
@@ -128,7 +128,8 @@ body {
     word-wrap: break-word;
     white-space-collapse: preserve-breaks;
     font-size: 20px;
-    padding-left: 40px;
+    padding-left: 3vw;
+    padding-right: 3vw;
     font-family: monospace;
     background-color: #444444;
     border-radius: 20px;
@@ -139,13 +140,13 @@ body {
     background-color: #04AA6D;
     border: none;
     color: white;
-    padding: 0px 0px;
+    padding: 0px;
     text-decoration: none;
     margin: 15px 0px;
     cursor: pointer;
     transition-duration: 0.4s;
     border-radius: 15px;
-    display: flex !important;
+    display: inline-flex !important;
     align-items: center;
 }
 
@@ -163,8 +164,18 @@ body {
 .projectbuttons .buttonwords {
     text-align: left !important;
     padding-right: 15px !important;
-    padding-left: 15px;
+    padding-left: 2vw;
 
+}
+
+.buttonwords.bw1 {
+    font-size: 30px;
+}
+.buttonwords.bw2 {
+    font-size: 18px;
+}
+.buttonwords.bw3 {
+    font-size: 10px;
 }
 
 .projectbuttons:hover {
@@ -177,9 +188,25 @@ body {
 }
 
 .buttoncontainer {
-     display: flex;
-     padding-left: 30px;
+     display: inline-flex !important;
+     padding-left: 1vw;
      gap: 15px;
+}
+
+@media screen and (max-width: 600px) {
+    .buttonwords.bw1 {
+        font-size: 24px;
+    }
+    .buttonwords.bw2 {
+        font-size: 12px;
+    }
+    .buttonwords.bw3 {
+        font-size: 8px;
+    }
+    .projectbuttons {
+        padding: 10px;
+    }
+
 }
 
 /* FOOTER */
